--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="node_modules/rxjs/bundles/Rx.js"></script>
         <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
         <script src="node_modules/angular2/bundles/router.dev.js"></script>
-         <link rel="stylesheet" href="lib/css/style.css">
+         <link rel="stylesheet" href="lib/css/app.css">
         <!-- 2. Configure SystemJS -->
         <script>
           System.config({
