--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <script src="node_modules/rxjs/bundles/Rx.js"></script>
         <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
         <script src="node_modules/angular2/bundles/router.dev.js"></script>
+
+        <link rel="icon" type="image/png" href="lib/img/favicon.png" />
         
          <link rel="stylesheet" href="lib/css/app.css">
         <!-- 2. Configure SystemJS -->
