--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     </head>
     <!-- 3. Display the application -->
-    <body onload="init();">
+    <body>
 
       <my-app>Loading...</my-app>
     </body>
