--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
       <link rel="icon" type="image/png" href="lib/img/favicon.png" />
 
+      <meta name="viewport" content="initial-scale=1">
+
       <link rel="stylesheet" href="lib/css/app.css">
       <!-- 2. Configure SystemJS -->
       <script>
