--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
       <my-app>Loading...</my-app>
 
       <div class="no-landscape">
-        NO LANDSCAPE!
+        <div class="no-landscape-container">
+          <h3>Landscape is a bust.</h3>
+          <p>Telepiction works as a portrait app.</p>
+        </div>
       </div>
     </body>
     </html>
