--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     <html>
     <head>
       <title>Telepiction - Write. Pass. Draw.</title>
-      <base href="/projects/Telepiction/">
+      <base href="/">
       <!-- 1. Load libraries -->
       <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react-with-addons.js"></script>
       <script src="js/literallycanvas.js"></script>
